Partial_14Dec2021/force-app/main/default/objects/Ameyo_Credentials__c/Ameyo_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Ameyo Credentials</label>
</CustomObject>