Partial_14Dec2021/force-app/main/default/objects/Ameyo_Credentials__c/fields/Hash_Key__c.field-meta.xml
<CustomField>
    <fullName>Hash_Key__c</fullName>
    <label>Hash Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>