Partial_14Dec2021/force-app/main/default/objects/Ameyo_Credentials__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <label>Policy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>