Partial_14Dec2021/force-app/main/default/objects/Ameyo_Credentials__c/fields/Requesting_Host__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Host__c</fullName>
    <label>Requesting Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>